feat: Implement email settings for sales closing
Introduces functionality for configuring email settings to automatically send cash closing summaries to a manager.

This includes:
- Adding `emailSettings` state to `App.tsx`.
- Passing `emailSettings` to `SalesPage.tsx` and initializing a new state for email prompts.
- Updating `SettingsPage.tsx` to include form inputs and handlers for managing email configurations.
- Adding new translation keys in `pt.json` and `en.json` for email settings and related prompts.

--- a/locales/en.json
+++ b/locales/en.json
@@ -122,13 +122,13 @@
     "updateSuccess": "Client updated successfully!"
   },
   "address": {
-    "street": "Street / Address Line",
+    "street": "Street",
     "number": "Number",
     "complement": "Complement",
     "neighborhood": "Neighborhood",
     "city": "City",
     "state": "State",
-    "zipCode": "ZIP Code"
+    "zipCode": "Zip Code"
   },
   "sales": {
     "title": "POS - Point of Sale",
@@ -155,18 +155,18 @@
     "finalizePayment": "Payment",
     "totalPayable": "Total Payable",
     "remaining": "Remaining",
-    "changeDue": "Change",
+    "changeDue": "Change Due",
     "paymentMethod": "Payment Method",
     "cash": "Cash",
     "debitcard": "Debit Card",
     "creditcard": "Credit Card",
     "pix": "Pix",
     "onaccount": "On Account",
-    "paymentsMade": "Payments Made",
-    "amountTendered": "Amount Tendered",
-    "clientRequiredForOnAccount": "A client must be selected for 'On Account' sales.",
-    "paymentNotCovered": "The amount paid is less than the sale total.",
-    "emptyCartError": "The cart is empty. Please add items before proceeding.",
+    "paymentsMade": "Payments made",
+    "amountTendered": "Amount tendered",
+    "clientRequiredForOnAccount": "A client must be selected for on-account sales.",
+    "paymentNotCovered": "The amount paid is less than the total.",
+    "emptyCartError": "The cart is empty. Add items before proceeding.",
     "cancelSaleConfirm": "Are you sure you want to cancel the current sale? All items will be removed.",
     "saleCanceled": "Sale canceled.",
     "saleCompleted": "Sale completed successfully!",
@@ -176,8 +176,8 @@
     "paymentDetails": "Payment Details",
     "insufficientStockError": "Insufficient stock for {productName}.",
     "dueDate": "Due Date",
-    "dueDateRequired": "Due date is required for 'On Account' sales.",
-    "onAccountPaymentFor": "On Account payment for {clientName}",
+    "dueDateRequired": "The due date is required for on-account sales.",
+    "onAccountPaymentFor": "On-account payment for {clientName}",
     "filterStartDate": "Start Date",
     "filterEndDate": "End Date",
     "cardPaymentTitle": "Card Payment",
@@ -185,7 +185,7 @@
     "cardHolderName": "Cardholder Name",
     "expiryDate": "Expiry Date",
     "cvv": "CVV",
-    "gatewayDisclaimer": "Warning: This is a simulation screen. Do not enter real card details.",
+    "gatewayDisclaimer": "Warning: This is a simulation screen. Do not enter real card data.",
     "payAmount": "Pay",
     "processingPayment": "Processing...",
     "paymentApproved": "Payment Approved!"
@@ -219,20 +219,20 @@
     "adjustStock": "Adjust Stock",
     "stockAdjustmentFor": "Adjust Stock for",
     "movementType": "Movement Type",
-    "stockIn": "Stock-in (Purchase)",
+    "stockIn": "Stock In (Purchase)",
     "adjustment": "Inventory Adjustment",
     "loss": "Loss/Damage",
     "newQuantity": "New Quantity",
     "currentStockIs": "Current Stock",
     "stockAfterIs": "Stock After Adjustment",
-    "adjustmentReason": "Reason for Movement",
+    "adjustmentReason": "Movement Justification",
     "stockAdjustSuccess": "Stock adjusted successfully!",
     "history": "History",
     "movementHistoryFor": "Movement History for",
     "date": "Date",
     "user": "User",
-    "reason": "Reason",
-    "entrada": "Stock-in",
+    "reason": "Justification",
+    "entrada": "Stock In",
     "ajuste": "Adjustment",
     "perda": "Loss"
   },
@@ -270,7 +270,7 @@
     "saveSuccess": "Profile saved successfully!"
   },
   "reports": {
-    "exportData": "Export Data & Reports",
+    "exportData": "Export Data and Reports",
     "salesReport": "Sales Report by Period",
     "salesReportDescription": "Select a period to export the detailed sales report in PDF format.",
     "clientList": "Client List",
@@ -278,7 +278,7 @@
     "generateMonthlyReport": "Monthly Billing Report",
     "monthlyReportDescription": "Generate a consolidated report with the total billing for each month of the year.",
     "generateAnnualDeclaration": "Annual Declaration (DASN-SIMEI)",
-    "annualDeclarationDescription": "Generate the Simplified Annual Declaration for MEI with a summary of the year's revenue, broken down by type.",
+    "annualDeclarationDescription": "Generate the Simplified Annual Declaration for MEI with the year's billing summary, separated by revenue type.",
     "exportPdf": "Generate PDF",
     "salesReportTitle": "Sales Report",
     "clientListTitle": "Client List",
@@ -292,22 +292,22 @@
     "annualSummary": "Annual Gross Revenue Summary",
     "month": "Month",
     "totalBilled": "Total Billed",
-    "revenueType": "Source of Revenue",
-    "resaleRevenue": "Resale of merchandise",
-    "industrializedRevenue": "Sale of industrialized products",
-    "serviceRevenue": "Provision of services",
+    "revenueType": "Revenue Source",
+    "resaleRevenue": "Merchandise Resale",
+    "industrializedRevenue": "Sale of Industrialized Products",
+    "serviceRevenue": "Service Provision",
     "totalGrossRevenue": "Total Gross Revenue",
     "cashSessionsReport": "Cash Sessions Report",
-    "cashSessionsReportDescription": "Export a history of all cash register sessions, including openings, closings, and differences.",
+    "cashSessionsReportDescription": "Export a history of all cash sessions, including openings, closings, and differences.",
     "cashSessionsReportTitle": "Cash Sessions Report",
     "opened": "Opened",
     "closed": "Closed",
     "inventoryReports": "Inventory Reports",
     "inventoryReportsDescription": "Analyze product turnover and stock levels.",
     "generateTurnoverReport": "Product Turnover",
-    "turnoverReportDescription": "Export a report showing best-selling and non-selling products.",
+    "turnoverReportDescription": "Export a report with the most and least sold products.",
     "generateLowStockReport": "Low Stock",
-    "lowStockReportDescription": "Export a list of products that have reached their minimum stock level.",
+    "lowStockReportDescription": "Export a list of products that have reached the minimum stock level.",
     "productTurnoverReportTitle": "Product Turnover Report",
     "bestSellers": "Best-Selling Products",
     "deadStock": "Dead Stock (No Sales)",
@@ -321,9 +321,9 @@
     "cashFlowReport": "Cash Flow",
     "cashFlowReportDescription": "View all cash inflows and outflows for a period.",
     "cashFlowReportTitle": "Cash Flow Report",
-    "profitReport": "Profit & Loss Statement",
+    "profitReport": "Profit Statement",
     "profitReportDescription": "Calculate net profit based on revenues, costs, and expenses.",
-    "profitReportTitle": "Profit & Loss Statement",
+    "profitReportTitle": "Profit Statement",
     "type": "Type",
     "inflow": "Inflow",
     "outflow": "Outflow",
@@ -346,13 +346,21 @@
     "logout": "Log Out",
     "logoutDescription": "Ends your current session.",
     "logoutButton": "Log Out",
-    "logoutConfirm": "Are you sure you want to log out?"
+    "logoutConfirm": "Are you sure you want to log out?",
+    "emailSettingsTitle": "Email Settings",
+    "emailSettingsDescription": "Configure the Google account to automatically send the cash closing summary to the manager.",
+    "managerEmail": "Manager's Email",
+    "sendingEmail": "Sending Email (Google Account)",
+    "appPassword": "Google App Password",
+    "appPasswordHelp": "To allow the system to send emails securely, create and use an 'App Password' in your Google account.",
+    "learnMore": "Learn more",
+    "emailSettingsSaved": "Email settings saved successfully!"
   },
   "validation": {
     "required": "This field is required.",
     "invalidEmail": "Please enter a valid email.",
-    "invalidCnpj": "Please enter a valid CNPJ in the format XX.XXX.XXX/XXXX-XX.",
-    "passwordMinLength": "Password must be at least 6 characters long.",
+    "invalidCnpj": "Please enter a CNPJ in the format XX.XXX.XXX/XXXX-XX.",
+    "passwordMinLength": "Password must be at least 6 characters.",
     "invalidPrice": "Please enter a valid price greater than zero.",
     "endDateAfterStartDate": "The end date must be after the start date.",
     "invalidStock": "Please enter a valid stock value (0 or greater).",
@@ -365,12 +373,12 @@
     "operator": "Operator",
     "openedAt": "Opened At",
     "openingBalance": "Opening Balance",
-    "cashMovement": "Cash In/Out",
+    "cashMovement": "Cash Movement",
     "closeCash": "Close Cash",
     "openCash": "Open Cash",
     "openCashPrompt": "To start sales, you need to open the cash register.",
     "invalidOpeningBalance": "Please enter a valid opening balance.",
-    "cashOpened": "Cash opened",
+    "cashOpened": "Cash register opened",
     "cashOpenedSuccess": "Cash register opened successfully!",
     "supply": "Supply",
     "withdrawal": "Withdrawal",
@@ -384,15 +392,16 @@
     "withdrawals": "Withdrawals",
     "expectedBalance": "Expected Balance",
     "countedBalance": "Counted Balance",
-    "invalidCountedBalance": "Please enter the amount counted in the cash register.",
+    "invalidCountedBalance": "Please enter the counted amount in the cash register.",
     "difference": "Difference",
     "surplus": "Surplus",
     "shortage": "Shortage",
-    "confirmCloseCash": "Confirm Closing",
+    "confirmCloseCash": "Confirm Close",
+    "confirmAndSendEmail": "Confirm & Send Email",
     "cashClosedSuccess": "Cash register closed successfully!",
     "operationCanceled": "Operation canceled. Returning to dashboard.",
-    "closingSummaryToast": "Cash closed! Expected: R$ {{expected}}, Counted: R$ {{counted}}, Difference: R$ {{difference}}",
-    "postClosingTitle": "Cash Register Closed Successfully",
+    "closingSummaryToast": "Cash closed! Expected: ${{expected}}, Counted: ${{counted}}, Difference: ${{difference}}",
+    "postClosingTitle": "Cash Closed Successfully",
     "postClosingDescription": "What would you like to do now?",
     "sendByEmail": "Send Summary by Email",
     "sendByWhatsApp": "Send Summary by WhatsApp",
@@ -400,17 +409,19 @@
     "summarySentByEmail": "Summary sent to the manager's email.",
     "summarySentByWhatsApp": "Summary sent to the manager's WhatsApp.",
     "emailModalTitle": "Send Summary by Email",
-    "recipientEmail": "Recipient's Email",
+    "recipientEmail": "Recipient Email",
     "emailSubject": "Subject",
     "emailBody": "Email Body",
     "sendEmail": "Send Email",
     "emailClientOpened": "Your email client has been opened to send the summary.",
+    "managerEmail": "Manager's Email (Main)",
+    "additionalEmails": "Additional Emails (comma-separated)",
     "emailSubjectTemplate": "Cash Closing Summary - {{date}}",
     "emailBodyTemplate": {
       "title": "Cash Closing Summary",
       "operator": "Operator: {{operatorName}}",
-      "openedAt": "Opened At: {{time}}",
-      "closedAt": "Closed At: {{time}}",
+      "openedAt": "Opened: {{time}}",
+      "closedAt": "Closed: {{time}}",
       "openingBalance": "Opening Balance: {{amount}}",
       "expectedBalance": "Expected Balance: {{amount}}",
       "countedBalance": "Counted Balance: {{amount}}",
@@ -443,9 +454,9 @@
     "expenseDeleted": "Expense deleted successfully.",
     "expenseAdded": "Expense added successfully.",
     "expenseUpdated": "Expense updated successfully.",
-    "registerPayment": "Register Payment",
+    "registerPayment": "Register Receipt",
     "confirmReceivePayment": "Confirm receipt of this account?",
-    "paymentReceivedSuccess": "Payment registered successfully.",
+    "paymentReceivedSuccess": "Receipt registered successfully.",
     "saleId": "Sale ID",
     "filterByStatus": "Filter by Status",
     "all": "All",
